--- a/CV_Projekt/CV_Projekt/wwwroot/css/site.css
+++ b/CV_Projekt/CV_Projekt/wwwroot/css/site.css
@@ -2,6 +2,15 @@ html {
   font-size: 14px;
 }
 
+.nav-link {
+    text-align: right;
+    
+}
+
+.nav-item {
+    margin: 0 2px;
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
