lite nytt i shared

--- a/CV_Projekt/CV_Projekt/wwwroot/css/site.css
+++ b/CV_Projekt/CV_Projekt/wwwroot/css/site.css
@@ -2,6 +2,21 @@ html {
   font-size: 14px;
 }
 
+body {
+    background-color: dimgrey;
+}
+.footer-shared {
+    color: lightgrey;
+}
+a:link {
+    color: lightgray;   
+}
+a:visited {
+    color: brown;
+}
+#cv-nav {
+    color: lightgray;
+}
 .nav-link {
     text-align: right;
     
