--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CV_Projekt.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -16,6 +17,7 @@
             <a href="/" class="navbar-brand">
 				<h3 id="cv-nav">Curriculum Vitae</h3>
             </a>
+			
             
             <button class="navbar-toggler ml-auto"
                     type="button"
@@ -27,11 +29,15 @@
             <div class="navbar-collapse collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="lock-fill text-white">Logga In</i></a>
-                    </li>
+                        <a class="nav-link" href="#"><i class="fa-solid fa-lock"></i>Logga In</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#"><<i class="fa-solid fa-user"></i>Mina Sidor</a>
+					</li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><h5 class="gear text-white">Inställninggar</h5></a>
+                        <a class="nav-link" href="#"><i class="fa-solid fa-gear"></i>Inställningar</a>
                     </li>
+                    
                 </ul>
             </div>
         </nav> 
