--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -1,30 +1,22 @@
-﻿@model IEnumerable<CV_Projekt.Models.CV>
+﻿@model CV_Projekt.Models.CVViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <div class="container mt-4">
-        <h1>Lista med Cvn</h1>
         <div class="row">
-            @foreach (var cv in Model) {
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5>CV: @cv.Id</h5>
-                            <p class="card-text">
-                                Ägarid: @cv.Owner != null ? @cv.Owner.FirstName + @cv.Owner.LastName : "Ingen användare"<br />
-                                Erfarenheter:
-                                @* @if (cv.Experiences ! = null && @cv.Experiences.Any()) { *@
-
-                                }
-                            </p>
-                        </div>
-                    </div>
+            @foreach (var cv in Model.Users) 
+            {
+                <div class="col">
+                    <h3>@cv.FirstName</h3>
                 </div>
             }
         </div>
     </div>
+</div>
+            
+</div>
     <a asp-controller="Project" asp-action="ProjectView">Gå till projektsida</a>
 </div>
 
