--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -1,9 +1,15 @@
-﻿@model CV_Projekt.Models.CVViewModel
+﻿@model CVViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+
+
+<div class="text-center"></div>
+
+
+
+
     <div class="container mt-4">
         <div class="row">
             @foreach (var cv in Model.Users) 
@@ -14,9 +20,8 @@
             }
         </div>
     </div>
-</div>
             
-</div>
+
     <a asp-controller="Project" asp-action="ProjectView">Gå till projektsida</a>
 </div>
 
