--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -3,38 +3,50 @@
     ViewData["Title"] = "Home Page";
 }
 
-
 <div class="text-center"></div>
-
-
 
 <div class="container">
     <div class="row">
         @foreach (var user in Model.Users) 
         {
-            <div class="col-auto">
-                <div class="border p-3 d-flex">
-                    <div class="me-4">
-                        <p class="font-weight-bold">@user.FirstName</p>
-                        <p class="font-weight-bold">@user.LastName</p>
+            var userCvs = Model.Cvs.Where(c => c.OwnerId == user.Id).ToList();
+
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body position-relative">
+                        <p class="font-weight-bold">@user.FirstName @user.LastName</p>
                         @foreach (var exp in Model.Experiences.Where(e => e.UserId == user.Id))
                         {
                             <div>
                                 <p>@exp.Location</p>
-                                <p>@exp.Description</p>
+                                @if (exp.Description !=null)
+                                {
+                                    <p>@exp.Description</p>
+                                } else {
+                                    <p>Beskrivning av arbetsuppgifter saknas.</p>
+                                }
                             </div>
                         }
                     </div>
                     <div>
+                        @if (userCvs.Any())
                         @foreach (var cv in Model.Cvs.Where(c => c.OwnerId == user.Id))
                         {
-                            <ul>
-                                @foreach (var skill in cv.Skills)
-                                {
-                                    <li>@skill</li>
-                                }
-                            </ul>
+                            <p>Färdigheter:</p>
+                                <ul>
+                                    @foreach (var skill in cv.Skills) 
+                                    {
+                                        <li>@skill</li>
+                                    }
+                                </ul>
+                        } else {
+                            <p>Inga färdigheter listade</p>
                         }
+                        @* Placeholder för en länk som skall peka på en profil *@
+                        @* <a asp-controller="Profile"
+                        asp-action="Index"
+                        asp-route-id="@()"
+                        class="stretched-link"></a> *@
                     </div>
                 </div>
             </div>
@@ -44,5 +56,4 @@
             
 
     <a asp-controller="Project" asp-action="ProjectView">Gå till projektsida</a>
-</div>
 
