--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -6,41 +6,44 @@
 <div class="text-center"></div>
 
 <div class="container">
-    <div class="row">
+    <div class="card-group">
         @foreach (var user in Model.Users) 
         {
-            var userCvs = Model.Cvs.Where(c => c.OwnerId == user.Id).ToList();
 
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body position-relative">
-                        <p class="font-weight-bold">@user.FirstName @user.LastName</p>
+                        <div class="card-header font-weight-bold">@user.FirstName @user.LastName</div>
                         @foreach (var exp in Model.Experiences.Where(e => e.UserId == user.Id))
                         {
                             <div>
-                                <p>@exp.Location</p>
+                                <div class="card-title fw-bold">@exp.Location</div>
                                 @if (exp.Description !=null)
                                 {
-                                    <p>@exp.Description</p>
+                                    <div class="card-text">@exp.Description</div>
+                                    <br />
                                 } else {
-                                    <p>Beskrivning av arbetsuppgifter saknas.</p>
+                                    <div class="card-text">Beskrivning av arbetsuppgifter saknas.</div>
+                                    <br />
                                 }
                             </div>
                         }
                     </div>
                     <div>
-                        @if (userCvs.Any())
                         @foreach (var cv in Model.Cvs.Where(c => c.OwnerId == user.Id))
                         {
-                            <p>Färdigheter:</p>
-                                <ul>
-                                    @foreach (var skill in cv.Skills) 
-                                    {
-                                        <li>@skill</li>
-                                    }
-                                </ul>
-                        } else {
-                            <p>Inga färdigheter listade</p>
+                            @if (cv.Skills.Any())
+                            {
+                                <p>Färdigheter:</p>
+                                    <ul>
+                                        @foreach (var skill in cv.Skills) 
+                                        {
+                                            <li>@skill</li>
+                                        }
+                                    </ul>
+                            } else {
+                                <p>Inga färdigheter listade</p>
+                            }
                         }
                         @* Placeholder för en länk som skall peka på en profil *@
                         @* <a asp-controller="Profile"
