--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -104,5 +104,6 @@
 
 <div class="d-flex justify-content-center mt-2">
     <a asp-controller="Project" asp-action="ProjectView" class="btn btn-primary">Gå till projektsida</a>
+    <a asp-controller="Account" asp-action="LogIn">Logga in</a>
 </div>
 
