--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Curriculum Vitae</a>
+                    <a class="navbar-brand" href="/Home/">Curriculum Vitae</a>
                     <button data-mdb-button-init class="navbar-toggler" 
                             type="button" 
                             data-mdb-collapse-init data-mdb-target="#navbarSupportedContent"
