--- a/CV_Projekt/CV_Projekt/wwwroot/css/site.css
+++ b/CV_Projekt/CV_Projekt/wwwroot/css/site.css
@@ -14,6 +14,9 @@ i {
 .dropdown-toggle::after {
     display: none;
 }
+.vh-100 {
+    margin: 0 0 2rem 0;
+}
 a:link {
     color: lightgray;   
 }
