--- a/CV_Projekt/CV_Projekt/wwwroot/css/site.css
+++ b/CV_Projekt/CV_Projekt/wwwroot/css/site.css
@@ -15,13 +15,13 @@ i {
     display: none;
 }
 .vh-100 {
-    margin: 0 0 2rem 0;
+    margin: 0 0 rem 0;
 }
 a:link {
     color: lightgray;   
 }
 a:visited {
-    color: brown;
+    color: #ff6219;
 }
 #cv-nav {
     color: lightgray;
