--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -2,61 +2,108 @@
 
 
 <div class="card">
-	<div class="card-header">@Model.User.FirstName @Model.User.LastName </div>
-	<br />
+	<div class="card-header">
+		<h3>@Model.User.FirstName @Model.User.LastName </h3>
+	</div>
 	<div class="card-body">
 		<div class="row">
 			<div class="col-md-8">
-				<p>Projekt jag har skapat:</p>
-				<ul class="list-unstyled">
-				@foreach (var proj in Model.ProjectsCreated)
-				{
-					<li class="list-unstyled">@proj.Title</li>
-				}
-				</ul>
-
-				<br />
-				<p>Projekt jag har jobbat med:</p>
-				<ul class="list-unstyled">
-				@foreach (var proj in Model.ProjectCollaborator)
-				{
-					<li >@proj.Title</li>
-				}
-				</ul>
-				<br />
-				<p>Erfarenheter:</p>
-				<ul class="list-unstyled">
-				@foreach (var exp in Model.Experiences)
-				{
-					<li >@exp.Location</li>
-				}
-				</ul>
-				<p>färdigheter inkluderar:</p>
-				@if (Model.Skills != null)
-				{
-					<ul class="list-unstyled">
-					@foreach (var skill in Model.Skills)
+				<h5>Projekt jag har skapat:</h5>
+				<section class="mb-4">
+					@if (Model.ProjectsCreated != null && Model.ProjectsCreated.Any())
 					{
-						<li >@skill</li>
+						<ul class="list-unstyled">
+						@foreach (var proj in Model.ProjectsCreated)
+						{
+							<li class="list-unstyled">@proj.Title</li>
+						}
+						</ul>
+					} else {
+						<p class="fw-light">Användaren har inga skapade projekt</p>
 					}
-					</ul>
-				}
-				else
-				{
-					<ul>
-						<li class="list-unstyled">Inga skills lol</li>
-					</ul>
-				}
+				</section>
+
+				<section class="mb-4">
+					<h5>Projekt jag har jobbat med:</h5>
+					@if (Model.ProjectCollaborator != null && Model.ProjectCollaborator.Any())
+					{
+						<ul class="list-unstyled">
+							@foreach (var proj in Model.ProjectCollaborator)
+							{
+								<li>@proj.Title</li>
+							}
+						</ul>
+					}
+					else
+					{
+						<p class="fw-light">Inga projektsammarbeten hittades.</p>
+					}
+				</section>
+
+				<section class="mb-4">
+					<h5>Tidigare Erfarenheter:</h5>
+					@if (Model.Experiences != null && Model.Experiences.Any())
+					{
+						<ul class="list-unstyled">
+							@foreach (var exp in Model.Experiences)
+							{
+								
+								<li>
+									@exp.Location
+									@if (exp.Description != null)
+									{
+										<p class="fw-light">@exp.Description</p>
+									}
+									else
+									{
+										<p class="fw-light">Beskrivning saknas.</p>
+									}
+								</li>
+							}
+						</ul>
+					}
+					else
+					{
+						<p class="fw-light">Inga tidgare erfarenheter hittades</p>
+					}
+				</section>
+				
+				
+				<section class="mb-4">
+					<h5>Färdigheter Inkluderar:</h5>
+					@if (Model.Skills != null && Model.Skills.Any())
+					{
+						<ul class="list-unstyled">
+							@foreach (var skill in Model.Skills)
+							{
+								<li>@skill</li>
+							}
+						</ul>
+					}
+					else
+					{
+						<p class="fw-light">Användaren har inga färdigheter listade</p>
+					}
+				</section>
 			</div>
 		
 			<div class="col-md-4">
-				<p>Taggar:</p>
-				<ul class="list-unstyled">
-				@foreach (var tag in Model.Tags)
-				{
-					<li >@tag.Descriptor</li>
-				} 
-				</ul>
+				<section class="mb-4">
+					<h5>
+						<i class="fas fa-hashtag fa-2x" aria-hidden="true" aria-label="Taggar"></i>
+					</h5>
+					@if (Model.Tags != null && Model.Tags.Any())
+					{
+						<ul class="list-unstyled">
+						@foreach (var tag in Model.Tags)
+						{
+							<li>@tag.Descriptor</li>
+						}
+						</ul>
+					} else {
+						<p class="fw-light">Inga taggar tillagda</p>
+					} 	
+				</section>
 			</div>
 		</div>
 	</div>
