--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -104,6 +104,24 @@
 						<p class="fw-light">Inga taggar tillagda</p>
 					} 	
 				</section>
+
+				<section class="mb-4">
+					<h5 class="text-decoration-underline">Kontaktinformation</h5>
+					@if (Model.User.ContactInformation != null)
+					{
+						<ul class="list-unstyled">
+							<li>Email: @Model.User.ContactInformation.Email</li>
+							<li>Telefon: @Model.User.ContactInformation.Phone</li>
+							@if (!string.IsNullOrEmpty(Model.User.ContactInformation.Address))
+							{
+								<li>Adress: @Model.User.ContactInformation.Address</li>
+							}
+						</ul>
+					} else {
+						<p class="fw-light">Kontaktinformation saknas</p>
+					}
+				</section>
+
 			</div>
 		</div>
 	</div>
