--- a/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfile.cshtml
@@ -11,12 +11,15 @@
                                  alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
                                  style="width: 150px; z-index: 1">
                             <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
-                                Ändra Profil
+                                <i class="fa-solid fa-gear"></i> Ändra Profil
+                            </button>
+                            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
+                               <i class="fa-solid fa-envelope"></i> Meddelanden
                             </button>
                         </div>
                         <div class="ms-3" style="margin-top: 130px;">
-                            <h5>Namn Namnsson</h5>
-                            <p>Stadbyn</p>
+                            <h5>Model.User.FirstName Model.User.LastName</h5>
+                            <p>Model.User.ContactInformation.Email</p>
                         </div>
                     </div>
                     <div class="p-4 text-black bg-body-tertiary">
@@ -37,11 +40,39 @@
                     </div>
                     <div class="card-body p-4 text-black">
                         <div class="mb-5  text-body">
-                            <p class="lead fw-normal mb-1">CV</p>
+                            <p class="lead fw-normal mb-1">Kontaktinformation</p>
                             <div class="p-4 bg-body-tertiary">
-                                <p class="font-italic mb-1">Arbetslivserfarenhet</p>
-                                <p class="font-italic mb-1">Utbildningar</p>
-                                <p class="font-italic mb-0">Andra Erfarenheter</p>
+                                
+                                <p class="font-italic mb-1">Model.User.ContactInformation.Address</p>
+                                <p class="font-italic mb-1">Model.User.ContactIformation.Phone</p>
+                                
+                            </div>
+                            <div class="row-cols-1">
+                                <div class="card col mb-2">
+                                    <div class="card-body" style="background-color: dimgray; color: lightgray" >
+                                        <h5 class="card-header bg-dark" style="text-align:center;">Mitt CV</h5>
+                                        <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Arbetslivserfarenhet</h6>
+                                        <!-- foreach(var expWork in Model.Experience.Work) { -->
+                                        <p class="card-text">expWork.Title</p>
+                                        <p class="card-text">expWork.Description</p>
+                                       <!-- } -->
+                                        <p class="card-text">Livet</p>
+                                        <p class="card-text">Avtalat</p>
+                                        <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Utbildning</h6>
+                                        <!-- foreach(var expEdu in Model.Experience.Education) { -->
+                                        <p class="card-text">expEdu</p>
+                                        <!-- } -->
+                                        <p class="card-text">Fiskmåsskolan</p>
+                                        <p class="card-text">Dagis</p>
+                                        <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Annan Erfarenhet</h6>
+                                        <!-- foreach(var expOther in Model.Experience.Work) { -->
+                                        <p class="card-text">expOther</p>
+                                        <!-- } -->
+                                        <p class="card-text">Extra Text</p>
+                                        <p class="card-text">Jag är en gummibåt</p>
+                                        <p class="card-text">Min mor är en häst</p>
+                                    </div>
+
                             </div>
                         </div>
                         <div class="d-flex justify-content-between align-items-center mb-4 text-body">
@@ -49,23 +80,39 @@
                             <p class="mb-0"><a href="#!" class="text-muted">Visa alla</a></p>
                         </div>
                         <div class="row g-2">
-                            <div class="col mb-2">
+                            <div class="card col mb-2">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1"
-                                     class="w-100 rounded-3">
+                                     class="card-img-top w-100 rounded-3">
+                                     <div class="card-body">
+                                         <p class="card-text">Model.Projekt.Title</p>
+                                         <p class="card-text">Model.Projekt.Description</p>
+                                     </div>
                             </div>
                             <div class="col mb-2">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp" alt="image 1"
-                                     class="w-100 rounded-3">
+                                     class="card-img-top w-100 rounded-3">
+                                <div class="card-body">
+                                    <p class="card-text">Model.Projekt.Title</p>
+                                    <p class="card-text">Model.Projekt.Description</p>
+                                </div>
                             </div>
                         </div>
                         <div class="row g-2">
                             <div class="col">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(108).webp" alt="image 1"
-                                     class="w-100 rounded-3">
+                                     class="card-img-top w-100 rounded-3">
+                                <div class="card-body">
+                                    <p class="card-text">Model.Projekt.Title</p>
+                                    <p class="card-text">Model.Projekt.Description</p>
+                                </div>
                             </div>
                             <div class="col">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(114).webp" alt="image 1"
-                                     class="w-100 rounded-3">
+                                     class="card-img-top w-100 rounded-3">
+                                <div class="card-body">
+                                    <p class="card-text">Model.Projekt.Title</p>
+                                    <p class="card-text">Model.Projekt.Description</p>
+                                </div>
                             </div>
                         </div>
                     </div>
