--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -10,7 +10,9 @@
             <div class="col">
                 <div class="card h-100 d-flex flex-column">
                     <div class="card-body position-relative flex-grow-1">
-                        <div class="card-header font-weight-bold">@user.FirstName @user.LastName</div>
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp" alt="image 1"
+                             class="card-img-top w-100 rounded-3">
+                        <div class="card-header font-weight-bold bg-dark text-light">@user.FirstName @user.LastName</div>
                         @foreach (var exp in Model.Experiences.Where(e => e.UserId == user.Id))
                         {
                             <div>
@@ -55,7 +57,8 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <a  class="btn btn-primary"
+                        <a  class="btn btn-primary text-light"
+                            style="background-color:#ff6219; margin-bottom:2rem;"
                             asp-controller="Profile"
                             asp-action="Profile"
                             asp-route-id="@user.Id" >
@@ -93,7 +96,8 @@
                     }
                     <div class="text-center">
                         @* Placeholder för en länk som skall leda till projektet *@
-                        <a href="#" class="btn btn-primary"
+                        <a href="#" class="btn btn-primary text-light"
+                            style="background-color:#ff6219; margin-bottom:2rem;"
                         @* asp-controller="Profile"
                         asp-action="Index"
                         asp-route-id="@()" *@>
@@ -105,13 +109,11 @@
         </div>
     </div>
 
-<br />
-<br />
+
 
 <div class="d-flex justify-content-center mt-2">
-    <a asp-controller="Project" asp-action="ProjectView" class="btn btn-primary">Gå till projektsida</a>
-</div>
-<br />
-<div class="d-flex justify-content-center mt-2">
-    <a asp-controller="Account" asp-action="LogIn" class="btn btn-primary">Logga in</a>
+    <a asp-controller="Project" asp-action="ProjectView" class="btn btn-primary text-light" style="background-color:#ff6219; margin:1rem;">Gå till projektsida</a>
+
+
+    <a asp-controller="Account" asp-action="LogIn" class="btn btn-primary text-light" style="background-color:#ff6219; margin:1rem;">Logga in</a>
 </div>
