--- a/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
@@ -1,4 +1,4 @@
-﻿<section class="vh-100" style="background-color: dimgrey;">
+﻿<section class="vh-100" style="background-color: dimgrey; margin-bottom:2rem;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-xl-10">
