JESUS VILKEN JÄVLA DYNGA

--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
                                 <a  class="btn btn-primary text-light"
                                 style="background-color:#ff6219; margin-bottom:2rem;"
                                 asp-controller="Profile"
-                                asp-action="ViewCv"
+                                asp-action="Profile"
                                 asp-route-id="@cv.Id">
                                 Visa CV
                                 </a>
