--- a/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
@@ -1,4 +1,6 @@
-﻿<section class="vh-100" style="background-color: dimgrey; margin-bottom:2rem;">
+﻿@model LogInViewModel
+
+<section class="vh-100" style="background-color: dimgrey; margin-bottom:2rem;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-xl-10">
@@ -11,7 +13,7 @@
                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-5 text-black">
 
-                                <form>
+                                <form method="post" asp-action="LogIn">
 
                                     <div class="d-flex align-items-center mb-3 pb-1">
                                         <i class="fa-solid fa-robot fa-2x me-3" style="color: #ff6219;"></i>
@@ -21,17 +23,21 @@
                                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Logga in</h5>
 
                                     <div data-mdb-input-init class="form-outline mb-4">
-                                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
-                                        <label class="form-label" for="form2Example17">Epost</label>
+                                        <input type="text" id="form2Example17" class="form-control form-control-lg" asp-for="UserName" />
+                                        <label class="form-label" for="form2Example17">Användarnamn</label>
                                     </div>
 
                                     <div data-mdb-input-init class="form-outline mb-4">
-                                        <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                                        <input type="password" id="form2Example27" class="form-control form-control-lg" asp-for="Password"/>
                                         <label class="form-label" for="form2Example27">Lösenord</label>
                                     </div>
 
+                                    <div>
+                                        <input type="checkbox" value="Kom ihåg mig:" asp-for="RememberMe" />
+                                    </div>
+
                                     <div class="pt-1 mb-4">
-                                        <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="button">Logga In</button>
+                                        <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit">Logga In</button>
                                     </div>
 
                                     <a class="small text-muted" href="#!">Glömt Lösenord?</a>
